# LRS-Error-Correction

./: .gitignore  README.md  pyproject.toml  requirements.txt
.jupyter/kernels/lrs_err_correct_env/: kernel.json
configs/: base.yaml  real_data.yaml  real_uti89_notebook.yaml  test.yaml
configs/giab_hg002_local/: stage1_1kb_full.yaml  stage2_4kb_full.yaml  stage3_8kb_full.yaml
configs/hg002_chr20_small_benchmark/: 12x_chr20_small_full.yaml  20x_chr20_small_full.yaml  8x_chr20_small_full.yaml
configs/hg002_chr20_small_benchmark_ready/: 8x_chr20_small_full.yaml  8x_chr20_small_full_cpu_tiny.yaml
configs/hg002_chr20_small_benchmark_tiny/: 12x_full.yaml  20x_full.yaml  8x_full.yaml
configs/local_ready_training/: stage1_local_full.yaml
configs/real_uti89_notebook_ablation/: full.yaml  masked_target.yaml  target_only.yaml
notebooks/: real_ont_training_run.ipynb
notebooks/configs/giab_trio_benchmark/: stage1_1kb_full.yaml  stage2_4kb_full.yaml  stage3_8kb_full.yaml
scripts/: consensus_baseline.py  export_predictions_to_fastx.py  fetch_region_subset.py  make_dummy_data.py  no_edit_baseline.py  preprocess_real_data.py  run_assembly_eval.py  run_external_baseline.py  run_variant_eval.py  test.py  train.py
src/omega_longread/: __init__.py  benchmark_presets.py  config.py  dataset.py  decode.py  losses.py  metrics.py  model.py  modules.py  preprocessing.py  support.py  tokenizer.py  utils.py  vocab.py
